--- a/404.html
+++ b/404.html
@@ -26,6 +26,11 @@
         var pathSegmentsToKeep = 2;
 
         var l = window.location;
+
+        if (!l.pathname.startsWith("/v")) {
+            l.pathname = "/v6/" + l.pathname
+        }
+
         l.replace(
             l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
             l.pathname.split('/').slice(0, 1 + pathSegmentsToKeep).join('/') + '/?/' +
