--- a/404.html
+++ b/404.html
@@ -27,17 +27,17 @@
 
         var l = window.location;
 
-        if (!l.pathname.startsWith("/v")) {
-            l.pathname = "/v6/" + l.pathname
-        }
-
-        l.replace(
-            l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
+        let url = l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
             l.pathname.split('/').slice(0, 1 + pathSegmentsToKeep).join('/') + '/?/' +
             l.pathname.slice(1).split('/').slice(pathSegmentsToKeep).join('/').replace(/&/g, '~and~') +
             (l.search ? '&' + l.search.slice(1).replace(/&/g, '~and~') : '') +
-            l.hash
-        );
+            l.hash;
+
+        if (!url.includes("/blue-react/v")) {
+            url = url.replace("/blue-react", "/blue-react/v6")
+        }
+
+        l.replace(url);
 
     </script>
 </head>
