--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,7 @@
     }(window.location))
   </script>
   <!-- End Single Page Apps for GitHub Pages -->
+
 </head>
 
 <body>
@@ -64,6 +65,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+  <link href="css-variables.css" rel="stylesheet">
 </body>
 
 </html>
