--- a/public/index.html
+++ b/public/index.html
@@ -66,6 +66,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   <link href="css-variables.css" rel="stylesheet">
+  <link href="dark.css" rel="stylesheet" media="(prefers-color-scheme: dark)">
 </body>
 
 </html>
