--- a/public/index.html
+++ b/public/index.html
@@ -21,9 +21,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@900&amp;display=swap&amp;text=Blue"
+  <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:wght@600&amp;display=swap&amp;text=Blue+React"
     rel="stylesheet">
-  <title>Blue</title>
+  <title>Blue React</title>
 
   <!-- Start Single Page Apps for GitHub Pages -->
   <script type="text/javascript">
