--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
-        window.location.href = "./v9"
+        window.location.href = "./v10"
     </script>
     <!-- End Single Page Apps for GitHub Pages -->
 </head>
@@ -21,6 +21,7 @@
     <li><a href="./v7">v7</a></li>
     <li><a href="./v8">v8</a></li>
     <li><a href="./v9">v9</a></li>
+    <li><a href="./v10">v10</a></li>
 </body>
 
 </html>
