Upgrade Blue React & Added font

--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
         <link rel="apple-touch-icon" href="/logo192.png" />
         <link rel="manifest" href="/manifest.json" />
 
-        <link
-            href="https://fonts.googleapis.com/css2?family=Inter+Tight:wght@600&amp;display=swap&amp;text=Blue+React"
-            rel="stylesheet"
-        />
+        <link rel="stylesheet" href="/inter/web/inter.css" />
         <title>Blue React</title>
 
         <!-- Start Single Page Apps for GitHub Pages -->
