Update license report and improve example components
- Updated the license report JSON to reflect new versions for several dependencies, including:
  - blue-web: updated from 1.14.3 to 1.15.1
  - bootstrap: updated from 5.3.6 to 5.3.7
  - @types/react: updated from 19.1.6 to 19.1.8
  - license-report: updated from 6.7.1 to 6.8.0
  - Other dependencies also updated to their latest versions.

- Removed the unused 'body' prop from the Search component example to clean up the code.

- Replaced the blue.svg image with a new SVG design, enhancing the visual representation.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             name="description"
             content="UI library for React using Custom Components and Bootstrap"
         />
-        <link rel="apple-touch-icon" href="/logo192.png" />
+        <link rel="apple-touch-icon" href="blue-iOS-Default-83.5x83.5@4x.png" />
         <link rel="manifest" href="/manifest.json" />
 
         <link rel="stylesheet" href="/inter/web/inter.css" />
@@ -45,7 +45,7 @@
         </script>
         <!-- End Single Page Apps for GitHub Pages -->
     </head>
-    <body>
+    <body style="--blue-header-title-image-size: 1.6rem">
         <div id="root"></div>
         <script type="module" src="/src/main.tsx"></script>
         <style id="docs-inline-style"></style>
